cabal-version:   2.4
name:            zlib-clib
version:         1.3.1

copyright:       (c) 2006-2016 Duncan Coutts
license:         Zlib
license-file:    LICENSE
author:          Duncan Coutts <duncan@community.haskell.org>
maintainer:      Duncan Coutts <duncan@community.haskell.org>, Andrew Lelechenko <andrew.lelechenko@gmail.com>, Emily Pillmore <emilypi@cohomolo.gy>, Herbert Valerio Riedel <hvr@gnu.org>
bug-reports:     https://github.com/haskell/zlib/issues
category:        Codec
synopsis:        zlib C library bits
description:     This package provides the zlib C library bits that Haskell
                 bindings can use to link against.
build-type:      Simple
extra-source-files: changelog.md
                    README.md

source-repository head
  type: git
  location: https://github.com/haskell/zlib.git

library
  default-language: Haskell2010

  include-dirs: cbits
  includes: zlib.h

  c-sources: cbits/adler32.c
             cbits/compress.c
             cbits/crc32.c
             cbits/deflate.c
             cbits/infback.c
             cbits/inffast.c
             cbits/inflate.c
             cbits/inftrees.c
             cbits/trees.c
             cbits/uncompr.c
             cbits/zutil.c

  install-includes:
     crc32.h
     inffast.h
     inflate.h
     trees.h
     deflate.h
     inffixed.h
     inftrees.h
     zutil.h
     gzguts.h
     zlib.h
     zconf.h

